--- a/mouse-event.html
+++ b/mouse-event.html
@@ -10,6 +10,11 @@
             padding: 0;
         }
 
+        body {
+            height: 2000px;
+            background-color: pink;
+        }
+
         .drag-able {
             width: 100px;
             height: 100px;
@@ -26,7 +31,6 @@
         let endX = 0, endY = 0;
         let moveX=0, moveY=0;
         
-
         div.addEventListener('mousedown', (e) => {
             isClicked = true;
             clickX = e.clientX;
@@ -38,19 +42,32 @@
 
         window.addEventListener('mousemove', (e) => {
             if(isClicked) {
+                const top = e.clientY > 0;
+                const left = e.clientX > 0;
+                const bottom = e.clientY < window.innerHeight;
+                const right = e.clientX < window.innerWidth;
+
                 moveX = e.clientX - clickX;
                 moveY = e.clientY - clickY;
                 div.style.transform = `translate(${moveX + endX}px, ${moveY + endY}px)`
 
                 console.log(moveX,moveY)
+
+                if (tot && left && bottom && right) {
+                    isClicked = false;
+                    div.style.transform = `translate(${endX}px, ${endY}px)`
+                }
             }
         })
 
         div.addEventListener('mouseup', () => {
-            isClicked = false;
-            endX = moveX + endX;
-            endY = moveY + endY;
-            console.log(endX, endY);
+            if(isClicked) {
+                isClicked = false;
+                endX = moveX + endX;
+                endY = moveY + endY;
+                console.log(endX, endY);
+            }
+            
         })
     </script>
 </body>
