--- a/실습/socar/index.html
+++ b/실습/socar/index.html
@@ -90,7 +90,7 @@
                     쏘카와 함께 이동하세요.
                 </p>
                 <figure>
-                    <img src="image/usp_a.jpg" alt="차 옆에 서있는 남자가 싱글벙글 웃는 사진">
+                    <img src="img/usp_a.jpg" alt="차 옆에 서있는 남자가 싱글벙글 웃는 사진">
                 </figure>
             </div>
             <div class="advantage">
@@ -103,7 +103,7 @@
                     어디서나 편하게 출발하세요.
                 </p>
                 <figure>
-                    <img src="image/usp_b.jpg" alt="차 옆에 서있는 남자가 싱글벙글 웃는 사진">
+                    <img src="img/usp_b.jpg" alt="차 옆에 서있는 남자가 싱글벙글 웃는 사진">
                 </figure>
             </div>
             <div class="advantage">
@@ -114,7 +114,7 @@
                     10분 단위로 원하는 만큼만 이용하세요.
                 </p>
                 <figure>
-                    <img src="image/usp_c.jpg" alt="차 옆에 서있는 남자가 싱글벙글 웃는 사진">
+                    <img src="img/usp_c.jpg" alt="차 옆에 서있는 남자가 싱글벙글 웃는 사진">
                 </figure>
             </div>
             <div class="advantage">
@@ -127,7 +127,7 @@
                     선택해서 이용하세요.
                 </p>
                 <figure>
-                    <img src="image/usp_d.jpg" alt="차 옆에 서있는 남자가 싱글벙글 웃는 사진">
+                    <img src="img/usp_d.jpg" alt="차 옆에 서있는 남자가 싱글벙글 웃는 사진">
                 </figure>
             </div>
         </section>
